# MiaoUI

./: README.md  ui_conf.c  ui_conf.h
core/: ui.c  ui.h
display/: dispDirver.h  dispDriver.c  dispDriver.h
examples/ESP32C3/lib/MiaoUI/: ui_conf.c
examples/ESP32C3/lib/MiaoUI/core/: ui.c
examples/ESP32C3/lib/MiaoUI/display/: dispDirver.c
examples/ESP32C3/lib/MiaoUI/indev/: indevDirver.c
examples/ESP32C3/lib/MiaoUI/widget/: custom.c  parameter.c  text.c  wave.c
examples/ESP32C3/src/: HAL_Display.cpp  main.cpp
examples/ESP32C3_Arduino/: platformio.ini
examples/ESP32C3_Arduino/lib/MiaoUI/: ui_conf.c  ui_conf.h  version.h
examples/ESP32C3_Arduino/lib/MiaoUI/core/: ui.c
examples/ESP32C3_Arduino/lib/MiaoUI/display/: dispDriver.c  dispDriver.h
examples/ESP32C3_Arduino/lib/MiaoUI/fonts/: fonts.h
examples/ESP32C3_Arduino/lib/MiaoUI/images/: image.c
examples/ESP32C3_Arduino/lib/MiaoUI/indev/: indevDriver.c  indevDriver.h
examples/ESP32C3_Arduino/lib/MiaoUI/widget/: custom.c  custom.h  parameter.c  text.c  wave.c  wave.h
examples/ESP32C3_Arduino/src/: HAL_Button.cpp  HAL_Button.h  HAL_Display.cpp  HAL_Display.h  main.cpp
examples/ESP32C3_ESP-IDF/: CMakeLists.txt
examples/ESP32C3_ESP-IDF/components/Button/: Button.c  CMakeLists.txt
examples/ESP32C3_ESP-IDF/components/Button/include/: Button.h
examples/ESP32C3_ESP-IDF/components/Display/: CMakeLists.txt  Display.c
examples/ESP32C3_ESP-IDF/components/Display/include/: Display.h
examples/ESP32C3_ESP-IDF/components/MiaoUI/: CMakeLists.txt  ui_conf.c  ui_conf.h
examples/ESP32C3_ESP-IDF/components/MiaoUI/core/: ui.c  ui.h
examples/ESP32C3_ESP-IDF/components/MiaoUI/display/: dispDriver.c  dispDriver.h
examples/ESP32C3_ESP-IDF/components/MiaoUI/indev/: indevDriver.c  indevDriver.h
examples/ESP32C3_ESP-IDF/components/MiaoUI/widgets/: custom.c  custom.h  parameter.c  text.c  wave.c
examples/ESP32C3_ESP-IDF/components/u8g2/: CMakeLists.txt
examples/ESP32C3_ESP-IDF/main/: main.c
examples/STM32F103C8T6/: CMakeLists.txt  STM32F103C8T6.code-workspace  STM32F103C8T6.uvguix.JFeng  STM32F103C8T6.uvoptx
examples/STM32F103C8T6/.eide/: eide.json
examples/STM32F103C8T6/CMAKE/: gcc-arm-none-eabi.cmake
examples/STM32F103C8T6/CMAKE/GNU/: startup_stm32f10x_gcc.s  stm32F103C8T6.ld  syscalls.c  sysmem.c
examples/STM32F103C8T6/CMAKE/toolCmake/: CMakeLists.txt  post-build-tasks.cmake
examples/STM32F103C8T6/USER/: FreeRTOSConfig.h  main.c
examples/STM32F103C8T6/USER/APP/: APP.c  APP.h  APP_Button.c  APP_Button.h  APP_Buzzer.c  APP_Buzzer.h  APP_MPU6050.c  APP_MPU6050.h  APP_OSTest.c  APP_OSTest.h  APP_Ui.c  APP_Ui.h
examples/STM32F103C8T6/USER/HAL/: HAL.c  HAL.h  HAL_Button.c  HAL_Button.h  HAL_Buzzer.c  HAL_Buzzer.h  HAL_Display.c  HAL_Display.h  HAL_Flash.c  HAL_Flash.h  HAL_I2C.c  HAL_I2C.h  HAL_MPU6050.c  HAL_MPU6050.h  HAL_Tick.c  HAL_Tick.h  HAL_Usart.c  HAL_Usart.h
examples/STM32F103C8T6/lib/MPU6050/: mpu6050.c  mpu6050.h  mpuiic.c  mpuiic.h
examples/STM32F103C8T6/lib/MPU6050/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
examples/STM32F103C8T6/lib/MiaoUI/: CMakeLists.txt  README.md  ui_conf.c  ui_conf.h  version.h
examples/STM32F103C8T6/lib/MiaoUI/core/: ui.c
examples/STM32F103C8T6/lib/MiaoUI/display/: dispDirver.c  dispDirver.h  dispDriver.c
examples/STM32F103C8T6/lib/MiaoUI/fonts/: fonts.h
examples/STM32F103C8T6/lib/MiaoUI/images/: image.h
examples/STM32F103C8T6/lib/MiaoUI/indev/: indevDirver.c  indevDirver.h  indevDriver.c
examples/STM32F103C8T6/lib/MiaoUI/widget/: custom.c  custom.h  parameter.c  parameter.h  text.c  text.h  wave.h
examples/STM32F103C8T6/lib/fatfs/source/: diskio.c  ff.c  ffconf.h
examples/STM32F103C8T6/lib/general-buzzer/: buzzer.h
examples/STM32F103C8T6/lib/u8g2/sys/arduino/u8g2_page_buffer/TrackControl/: TrackControl.ino
examples/STM32F103C8T6/lib/u8g2/sys/arm/hc32/: oled_u8g2.c  oled_u8g2.h
examples/STM32F103C8T6/lib/u8g2/sys/sdl/clock/: gui.h  menu.c
examples/STM32F103C8T6/lib/u8g2/sys/sdl/menu/: gui.h  menu.c
examples/STM32F103C8T6/lib/u8g2/tools/font/bmf2bdf/: bmf2bdf.c
examples/Windows_SDL_Simulate/: Makefile  main.c
examples/Windows_SDL_Simulate/lib/MiaoUI/: Makefile  ui_conf.c  ui_conf.h
examples/Windows_SDL_Simulate/lib/MiaoUI/core/: ui.c  ui.h
examples/Windows_SDL_Simulate/lib/MiaoUI/display/: dispDriver.c  dispDriver.h
examples/Windows_SDL_Simulate/lib/MiaoUI/fonts/: fonts.c
examples/Windows_SDL_Simulate/lib/MiaoUI/indev/: indevDriver.c  indevDriver.h
examples/Windows_SDL_Simulate/lib/MiaoUI/widget/: custom.c  custom.h  parameter.c  parameter.h  text.c  text.h  wave.c  wave.h
examples/Windows_SDL_Simulate/src/: test.c
fonts/: fonts.c
images/: image.c  image.h
indev/: indevDirver.c  indevDirver.h  indevDriver.c  indevDriver.h
widget/: custom.c  parameter.c  parameter.h  text.c  text.h  wave.c
